# nested-learning

./: .gitignore  DOCUMENTATION_UPDATE.md  Dockerfile  EXECUTIVE_SUMMARY.md  FINAL_LAUNCH_CHECKLIST.md  LAUNCH_READY.md  PROMOTION_CHECKLIST.md  README.md  REPO_AUDIT_REPORT.md  docker-compose.yml  gpu_test.py  print("hello")  print('Hello from GPU')  pyproject.toml  requirements.txt  run_cgpu_uv.sh  run_lecoder_experiment.sh  stress_test.sh  train_hope.py
.claude/skills/paper-to-code/: README.md
.claude/skills/paper-to-code/references/: implementation-patterns.md  packaging-checklist.md  paper-analysis.md
demo/: app.py
docs/: AGENTS.md  ALGORITHMS.md  LECODER_CGPU_GUIDE.md  README.md
docs/project-management/: EXECUTIVE_SUMMARY.md  FINAL_LAUNCH_CHECKLIST.md  QUICK_STATUS.md  README.md  REPO_AUDIT_REPORT.md
notebooks/: quickstart.ipynb
src/: __init__.py
src/core/: __init__.py  memory.py  optimizers.py
src/experiments/: __init__.py  cuda_kernels.py  enterprise_pipeline.py
src/models/: __init__.py  hope.py  titans.py
src/utils/: training.py
tests/: test_components.py
